db: add V0 migration to create schema and tables manually

--- a/kotiki-app/src/test/resources/application-integrationtest.properties
+++ b/kotiki-app/src/test/resources/application-integrationtest.properties
@@ -1,11 +1,14 @@
+# Connection data
 spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS kotiki
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.hikari.schema=KOTIKI
 
+# Turn of hibernate schema construction
 spring.jpa.hibernate.ddl-auto=none
 
+# Flyway
 spring.flyway.enabled=true
 spring.flyway.schemas=KOTIKI
 spring.flyway.locations=classpath:/test-migrations
