--- a/kotiki-app/src/test/resources/application-integrationtest.properties
+++ b/kotiki-app/src/test/resources/application-integrationtest.properties
@@ -6,7 +6,7 @@ spring.datasource.password=password
 spring.datasource.hikari.schema=KOTIKI
 
 # Turn of hibernate schema construction
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Flyway
 spring.flyway.enabled=true
