test: fix tests

--- a/kotiki-app/src/test/resources/application-integrationtest.properties
+++ b/kotiki-app/src/test/resources/application-integrationtest.properties
@@ -6,10 +6,11 @@ spring.datasource.password=password
 spring.datasource.hikari.schema=KOTIKI
 
 # Turn of hibernate schema construction
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.schemas=KOTIKI
 spring.flyway.locations=classpath:/test-migrations
 spring.flyway.validate-migration-naming=true
+spring.flyway.clean-disabled=false
